fix classe Comando: -rimossa variabile oggetto e sostituita con metodo getParametro della classe AbstractComando nelle classi 1.ComandoPrendi