@@ -5,6 +5,7 @@ import java.util.Scanner;
 public class FabbricaDiComandiRiflessiva implements FabbricaDiComandi {
 
     public Comando costruisciComando(String istruzione) throws Exception {
+    	System.out.println("DEBUG - Stringa ricevuta dalla fabbrica: '" + istruzione + "'");
         Scanner scannerDiParole = new Scanner(istruzione); // es. 'vai sud'
         String nomeComando = null; // es. 'vai'
         String parametro = null;   // es. 'sud'
@@ -27,7 +28,7 @@ public class FabbricaDiComandiRiflessiva implements FabbricaDiComandi {
         // es. nomeClasse ora è: 'it.uniroma3.diadia.comandi.ComandoVai'
 
         // IL CUORE DELLA RIFLESSIONE
-        comando = (Comando) Class.forName(nomeClasse.toString()).newInstance();
+        comando = (Comando) Class.forName(nomeClasse.toString()).getDeclaredConstructor().newInstance();
         
         comando.setParametro(parametro);
         return comando;
